fixed and added animation of the burger menu visible-2

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ h6 {
 /*--------------------*/
 
 *.title {
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.49);
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   font-size: 18px;
   text-align: center;
   line-height: 1.2;
@@ -187,75 +187,6 @@ h6 {
 
 .header__menu-burger {
   display: none;
-}
-
-.header__menu-burger {
-  position: absolute;
-  display: block;
-  width: 30px;
-  height: 30px;
-  top: 20px;
-  right: 20px;
-}
-
-.header__menu-burger span:nth-child(1) {
-  -webkit-transition: all 1s;
-  -o-transition: all 1s;
-  transition: all 1s;
-  position: absolute;
-  display: block;
-  width: 30px;
-  height: 1px;
-  background-color: #000;
-}
-
-.header__menu-burger span:nth-child(2)::after {
-  content: "";
-  -webkit-transition: all 1s;
-  -o-transition: all 1s;
-  transition: all 1s;
-  display: block;
-  position: absolute;
-  margin: 8px 0 0 0;
-  width: 30px;
-  height: 1px;
-  top: 0;
-  right: 0;
-  background-color: #000;
-}
-
-.header__menu-burger span:nth-child(2)::before {
-  content: "";
-  -webkit-transition: all 1s;
-  -o-transition: all 1s;
-  transition: all 1s;
-  display: block;
-  position: absolute;
-  margin: 17px 0 0 0;
-  width: 30px;
-  height: 1px;
-  top: 0;
-  right: 0;
-  background-color: #000;
-}
-
-.header__menu-burger.active span:nth-child(1) {
-  opacity: 0;
-  top: -50px;
-}
-
-.header__menu-burger.active span:nth-child(2)::after {
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-  margin: 13px 0 0 0;
-}
-
-.header__menu-burger.active span:nth-child(2)::before {
-  -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  margin: 13px 0 0 0;
 }
 
 .generation {
@@ -846,6 +777,75 @@ body {
 
   .header__child-link {
     color: aqua;
+  }
+
+  .header__menu-burger {
+    position: absolute;
+    display: block;
+    width: 30px;
+    height: 30px;
+    top: 20px;
+    right: 20px;
+  }
+
+  .header__menu-burger span:nth-child(1) {
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
+    position: absolute;
+    display: block;
+    width: 30px;
+    height: 1px;
+    background-color: #000;
+  }
+
+  .header__menu-burger span:nth-child(2)::after {
+    content: "";
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
+    display: block;
+    position: absolute;
+    margin: 8px 0 0 0;
+    width: 30px;
+    height: 1px;
+    top: 0;
+    right: 0;
+    background-color: #000;
+  }
+
+  .header__menu-burger span:nth-child(2)::before {
+    content: "";
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
+    display: block;
+    position: absolute;
+    margin: 17px 0 0 0;
+    width: 30px;
+    height: 1px;
+    top: 0;
+    right: 0;
+    background-color: #000;
+  }
+
+  .header__menu-burger.active span:nth-child(1) {
+    opacity: 0;
+    top: -50px;
+  }
+
+  .header__menu-burger.active span:nth-child(2)::after {
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+    margin: 13px 0 0 0;
+  }
+
+  .header__menu-burger.active span:nth-child(2)::before {
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    margin: 13px 0 0 0;
   }
 
   .oliva__container {
